# ComfyUI

./: .env  .gitignore  AGENTS.md  execution.py  main.py  nodes.py  pyproject.toml  requirements-frozen.bak  requirements-frozen.txt  requirements.txt  server.py
.github/: copilot-instructions.md
ComfyUI/input/: flux.1_d  flux.1_s  lora_flux.1_d  lora_hunyuan_video  lora_pony  lora_sd_1.5  lora_sdxl_1.0  pony  sd_1.5
alembic_db/versions/: 0002_merge_to_asset_references.py
app/: logger.py
app/assets/: helpers.py  scanner.py  seeder.py
app/assets/api/: routes.py  schemas_in.py  upload.py
app/assets/database/: models.py
app/assets/database/queries/: __init__.py  asset.py  asset_reference.py  common.py  tags.py
app/assets/services/: __init__.py  asset_management.py  bulk_ingest.py  file_utils.py  hashing.py  ingest.py  metadata_extract.py  path_utils.py  schemas.py  tagging.py
app/database/: db.py
comfy/isolation/proxies/: base.py  folder_paths_proxy.py  helper_proxies.py  model_management_proxy.py  progress_proxy.py  prompt_server_impl.py  utils_proxy.py
comfy_api/latest/: _io.py
comfy_execution/: cache_provider.py  caching.py
comfy_extras/: nodes_custom_sampler.py  nodes_images.py
devotional_pipeline/: README.md  auto_devotional_episode.py  run_devotional_pipeline.py
devotional_pipeline/workflows/: 01_qwen_devotional_planner_api.json  02_wan22_video_from_devotional_iterator_api.json  03_ace15_audio_layer_iterator_api.json  04_ltx2_video_from_devotional_iterator_api.json  05_wan22_qwen3_devotional_clean_api.json  06_wan22_qwen3_audio_integrated_api.json  07_ltx2_qwen3_audio_integrated_api.json
tests-unit/: test_auto_devotional_episode.py
tests-unit/assets_test/: conftest.py  test_crud.py  test_file_utils.py  test_sync_references.py
tests-unit/assets_test/queries/: test_tags.py
tests-unit/assets_test/services/: test_asset_management.py  test_enrich.py
tests-unit/execution_test/: test_cache_provider.py
tests-unit/seeder_test/: test_seeder.py
tools/: test_gaistreich_parser.py
