[project]
name = "ComfyUI"
version = "0.15.1"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  # Core ComfyUI runtime dependencies (mirrors requirements.txt).
  "comfyui-frontend-package==1.39.19",
  "comfyui-workflow-templates==0.9.4",
  "comfyui-embedded-docs==0.4.3",
  "torch==2.9.1+cu128",
  "torchsde",
  "torchvision==0.24.1+cu128",
  "torchaudio==2.9.1+cu128",
  "numpy>=1.25.0",
  "einops",
  "transformers>=4.50.3",
  "tokenizers>=0.13.3",
  "sentencepiece",
  "safetensors>=0.4.2",
  "aiohttp>=3.11.8",
  "yarl>=1.18.0",
  "pyyaml",
  "Pillow",
  "scipy",
  "tqdm",
  "psutil",
  "alembic",
  "SQLAlchemy",
  "av>=14.2.0",
  "comfy-kitchen>=0.2.7",
  "comfy-aimdo>=0.2.2",
  "requests",
  "kornia>=0.7.1",
  "spandrel",
  "pydantic~=2.0",
  "pydantic-settings~=2.0",
  "PyOpenGL",
  "glfw",
  # Frequently used custom-node dependencies to keep uv sync reproducible.
  "matrix-nio>=0.25.2",
  "encodec>=0.1.1",
  "funcy>=2.0",
  "soundfile>=0.13.1",
  "gguf>=0.17.1",
  "piexif>=1.1.3",
  "PyWavelets>=1.8.0",
  "progressbar2>=4.5.0",
  "segment-anything==1.0",
  "librosa>=0.11.0",
  "imageio-ffmpeg>=0.6.0",
  "imageio",
  "matplotlib",
  "scikit-image",
  "opencv-python-headless",
  "dill",
  "timm",
  "torchlibrosa>=0.0.9",
  "ftfy",
  "unidecode",
  "phonemizer",
  "chardet<6",
  "pip",
  "pandas",
  "rotary-embedding-torch",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project.urls]
homepage = "https://www.comfy.org/"
repository = "https://github.com/comfyanonymous/ComfyUI"
documentation = "https://docs.comfy.org/"

[tool.ruff]
lint.select = [
  "N805", # invalid-first-argument-name-for-method
  "S307", # suspicious-eval-usage
  "S102", # exec
  "E",
  "T",    # print-usage
  "W",
  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
  # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
  "F",
]

lint.ignore = ["E501", "E722", "E731", "E712", "E402", "E741"]

exclude = ["*.ipynb", "**/generated/*.pyi"]

[tool.pylint]
master.py-version = "3.10"
master.extension-pkg-allow-list = [
  "pydantic",
]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "line-too-long",
  "too-few-public-methods",
  "too-many-public-methods",
  "too-many-instance-attributes",
  "too-many-positional-arguments",
  "broad-exception-raised",
  "too-many-lines",
  "invalid-name",
  "unused-argument",
  "broad-exception-caught",
  "consider-using-with",
  "fixme",
  "too-many-statements",
  "too-many-branches",
  "too-many-locals",
  "too-many-arguments",
  "too-many-return-statements",
  "too-many-nested-blocks",
  "duplicate-code",
  "abstract-method",
  "superfluous-parens",
  "arguments-differ",
  "redefined-builtin",
  "unnecessary-lambda",
  "dangerous-default-value",
  "invalid-overridden-method",
  # next warnings should be fixed in future
  "bad-classmethod-argument",  # Class method should have 'cls' as first argument
  "wrong-import-order",  # Standard imports should be placed before third party imports
  "ungrouped-imports",
  "unnecessary-pass",
  "unnecessary-lambda-assignment",
  "no-else-return",
  "unused-variable",
]
